# praxis

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  fly.toml  logical-architecture.md  package-lock.json  package.json  pyproject.toml  seed_teleology.py
deploy/: start.sh
src/praxis/: api.py  cli.py  db.py  filters-example.json  filters.py  generators.py  models.py  priorities.py
src/praxis/core/: __init__.py  db.py  filters.py  models.py
src/praxis/templates/: base.html  priority_list.html
src/praxis/ui/: __init__.py  api.py  cli.py
src/praxis_core/: __init__.py  api.py  cli.py  db.py  filters.py  models.py  prioritization.py  serialization.py
src/praxis_core/agent_api/: __init__.py  auth.py  graph.py  priorities.py  rules.py  tasks.py
src/praxis_core/api/: __init__.py  app.py  auth.py  auth_endpoints.py  friends_endpoints.py  invite_endpoints.py  priority_endpoints.py  rule_endpoints.py  sse.py  tag_endpoints.py  task_endpoints.py  trigger_endpoints.py
src/praxis_core/cli/: __init__.py  app.py  priority_commands.py  task_commands.py
src/praxis_core/dsl/: __init__.py  actions.py  conditions.py  date_parsing.py  effects.py  practice_config.py  templates.py  triggers.py
src/praxis_core/migrations/: 001_priorities_cleanup.py  002_tutorial_completed.py  003_priority_assignment.py  __init__.py
src/praxis_core/model/: __init__.py  entities.py  filters.py  practice_triggers.py  priorities.py  rules.py  tags.py  tasks.py  triggers.py  users.py
src/praxis_core/persistence/: __init__.py  api_key_repo.py  database.py  friend_repo.py  friend_request_repo.py  invite_repo.py  priority_persistence.py  priority_placement_repo.py  priority_repo.py  priority_sharing.py  priority_tree.py  rule_persistence.py  session_repo.py  subtask_repo.py  tag_persistence.py  task_persistence.py  task_queries.py  task_repo.py  trigger_persistence.py  user_persistence.py  user_repo.py
src/praxis_core/practices/: __init__.py  events.py  executor_v2.py  schedule_v2.py
src/praxis_core/rules/: __init__.py  defaults.py  engine.py  parser.py
src/praxis_core/triggers/: __init__.py  dsl.py  dsl_v2.py  engine.py  engine_v2.py  events.py  executor_v2.py  models_v2.py  schedule_v2.py  scheduler.py
src/praxis_core/web_api/: __init__.py  app.py  auth.py  auth_endpoints.py  friend_request_endpoints.py  (+7 more)
src/praxis_home/: __init__.py  config.py  server.py
src/praxis_web/: app.py  rendering.py
tests/: test_rules_scoring.py  test_schedule_fire.py
tests/dsl_v2/: __init__.py  test_engine.py  test_integration.py  test_parser.py
(+210 files in other folders)
