[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praxis-core"
version = "0.1.0"
description = "Cue-based task management - core library and API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Phil Bascom" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "markdown>=3.5.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-ulid>=2.0.0",
    "python-multipart>=0.0.6",
    "simpleeval>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
praxis = "praxis_core.cli:app"
praxis-home = "praxis_home.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis_core", "src/praxis_web", "src/praxis_home"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]